[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name= "python-lzf"
description = "C Extension for liblzf"
version = "0.2.6"
authors = [
  {name="Travis Parker", email="travis.parker@gmail.com"}
]
readme = "README.txt"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: C",
  "Topic :: System :: Archiving :: Compression",
]

[project.urls]
Repository = "http://github.com/teepark/python-lzf"
